8214481: freetype path does not disable TrueType hinting with AA+FM hints

Reviewed-by: serb, psadhukhan